@@ -1,5 +1,10 @@
 VP 10.4.0 Changelog
 ------------------------
+- add support for loading auto POV settings if they exists. You can now define an extra POV xml file for each table and name it like the VPX file.
+  Example: you have custom POV settings for the table "QBerts Quest (Gottlieb 1983).vpx" then save the POV settings into the file "QBerts Quest (Gottlieb 1983).xml" and place it 
+           in the same directory as the VPX file. Now VPX will load the POV settings when loading the "QBerts Quest (Gottlieb 1983).vpx" (in the editor/player).
+  Or if you like to have a default POV settings that is used for all other tables save it under "autopov.xml"
+  
 - stop sounds when exiting sound dialog, or exiting position dialog, and when you pick a different sound
 
 - add nudge test and calibration table (by DJRobX) to tables directory
